--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
     "body-parser": "^1.14.0",
     "express": "^4.13.3",
-    "firebase": "^2.2.9"
-  }
+    "firebase": "^2.2.9",
+    "fs": "0.0.2",
+    "twilio": "^2.3.0"
+  },
+  "devDependencies": {}
 }
